CHANGES log

2008-08-27 jabsorb 1.3 release

* Fixed bug in which jar wasn't included in release

2008-07-2 jabsorb 1.3rc2 release

* Issues 28,41,45,46,47 resolved.

* Extra unit tests

2008-05-09 jabsorb 1.3rc1 release

* Constructors added.

* Extracted unmarshallString() out of handleResponse() in jsonrpc.js. This 
  can be used to evaluate any JSON string with the client. 

* Modified message format to: .extensiontype[qualifier].methodname

* Updated JSON library 

* Tidied up exception interface

* Maven used to get external libraries.

* Added embedded jetty server which runs the test app.

* Fixed separate bugs regarding serialization of arrays and booleans.

2008-01-16/ jabsorb 1.2.2 release

* The json-rpc-client is now part of jabsorb, under the new package 
  org.jabsorb.client.  Thanks to Sasha Ovanskin for this extremely useful 
  addition to jabsorb.

* Changed internal circular and duplicate reference detection to use an 
  IdentityHashmap.
 
* Improved the message for an exception that can be thrown when a javaClass 
  hint cannot be found or instantiated.  Thanks to Stanley Knutson for the 
  suggestion.  

2007-12-26 jabsorb 1.2.1 release

* More improvements to exception handling; exception cause is included whenever
  possible.

* new flag fixupDuplicatePrimitives to control primitive duplicate fixups 
  serialization.

2007-11-20 jabsorb 1.2 release

* Minor improvements to exception handling.

* Remove JSP precompilation from build script and make JSP compilation dynamic
  for test web app.

2007-11-07 jabsorb 1.2rc3 release candidate

* Fix bug that caused bad fixups in the ArraySerializer.

* Optimizations to javascript fixup code.

* Changed build script to automatically create minified version of jsonrpc.js.

* memory leak bug fix with synchronous calls (thanks to Eric Pascarello for 
  finding this bug and providing the fix.)

2007-10-25 jabsorb 1.2rc2 release candidate
