@@ -1,5 +1,9 @@
 CHANGES log
 
+2008-12-01 jabsorb 1.3.1 release
+
+* Fix client side string encoding bug (Issue 52)
+
 2008-08-27 jabsorb 1.3 release
 
 * Fixed bug in which jar wasn't included in release
